--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^4.5.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-vue": "^6.2.2",
+    "firebase": "^7.17.1",
+    "jquery": "^3.5.1",
     "node-sass": "^4.12.0",
-    "prettier": "^1.19.1",
+    "popper.js": "^1.16.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
